src/css/Chat.css
.chat-body{
    display: flex;
    flex-direction: row-reverse;
    height: 95vh;
   
 
}

.main-chat-area{
    flex: 5;
    margin: 0 2rem 2rem 2rem;
}

.sidebar{
    flex: 1;
    display: flex;
    flex-direction: column;
    border-right: 2px solid black;
    margin-right: 15px;
    padding: 1rem;
    width: 0;
}

.chat-header{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 1rem;
}

.fa-bars{
    cursor: pointer;
    margin-top: 0.35rem;
    margin-right: 1rem;
}

.fa-caret-down{
    font-size: 20px;
    margin-top: 2px;
    margin-left: 5px;
    cursor: pointer;
}

.popup{
    display: block;
    position: absolute;
    border: 1px solid black;
    height: 30px;
    width: 80px;
    right: 4rem;
    top: 3rem;
}

.popup span{
    margin-left: 0.5rem;
    cursor: pointer;
}

.chatbox{
    margin: 2rem 0rem 3rem 4rem;
}

.sender-name{
    margin-bottom: 1rem;
}

.sender-body{
    margin: 0 0 1rem 2rem;
}


.chat-body form input{
    border: none;
    
}
.chat-messages{
    height: 80%;
}

.message-input{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    margin-top: auto;
    border: 2px solid black;
    border-radius: 20px;
   
}

.message-input form {
    
    flex: 2;
    display: flex;
    flex-direction: row;
}

.message-input textarea{
    width: 100%;
    height: 100%;
    padding: 0.5rem;
    border-radius: 20px;
    text-wrap: wrap;
    border: none;
    resize: none;
}

.message-input textarea:focus{
    outline: none;
}

.message-input button{
    height: 60%;
    background-color: white;
    margin-right: 0.5rem;
    
}

.message-input button:hover{
    border: none;
    outline: none;
}

.fa-circle-up{
    margin: 0rem 1rem 0 0;
    font-size: 2rem;
    cursor: pointer;
    flex: 1;
    
}


.sidebar-header{
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    margin-bottom: 4rem;
    
}

.hamburger{
    display: flex;
    flex-direction: row;

}

.sidebar button{
    
    margin-bottom: 4rem;
}

.sidebar-title{
    flex: 2;
    height: 30px;
    
}

.sidebar .close-button{
    display: flex;
    justify-content: flex-end;
    margin: 1rem;
    height: 10vh;
    cursor: pointer;
}

.fa-xmark{
    font-size: 20px;
    margin-right: 0.5rem;
    margin-top: 0.25rem;
    cursor: pointer;
   
}

.chat-list{
    margin-left: 1rem;
}

